# security-policy-as-code-framework-model

./: README.md  blogpost.md  index.md  linter.py  pyproject.toml  validate.py
.github/: CODEOWNERS
.github/workflows/: publish-policies.yml
guidance/: phishing-awareness-guidance.md  secure-coding-guidance.md
policies/: access-control.md  data-security.md  incident-response.md  network-security.md  vulnerability-management.md
processes/: data-classification-process.md  firewall-rule-request-process.md  incident-reporting-process.md
retired/: index.md
standards/: data-classification-standard.md  firewall-rule-standard.md  password-standard.md  vulnerability-scanning-standard.md
templates/: guidance-template.md  policy-template.md  process-template.md  standard-template.md
